Closed Bug 1437693 Opened 7 years ago Closed 7 years ago

300 instances of "Cannot know response Content-Length due to presence of Content-Encoding or Transfer-Encoding headers." emitted from dom/fetch/FetchDriver.cpp during linux64 debug testing

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla60
Tracking Status
firefox60 --- fixed

People

(Reporter: erahm, Assigned: erahm)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

> 261 WARNING: Cannot know response Content-Length due to presence of Content-Encoding or Transfer-Encoding headers.: file dom/fetch/FetchDriver.cpp, line 853 This warning [1] shows up in the following test suites: > 104 - test-linux64/debug-web-platform-tests-wdspec-e10s Wd > 62 - test-linux64/debug-marionette-headless-e10s MnH > 55 - test-linux64/debug-marionette-e10s Mn > 31 - test-linux64/debug-firefox-ui-functional-local-e10s en-US > 4 - test-linux64/debug-firefox-ui-functional-remote-e10s en-US > 2 - test-linux64/debug-web-platform-tests-e10s-12 wpt12 > 1 - test-linux64/debug-mochitest-plain-headless-e10s-7 h7 > 1 - test-linux64/debug-mochitest-e10s-7 7 > 1 - test-linux64/debug-web-platform-tests-e10s-5 wpt5 It shows up in 86 tests. A few of the most prevalent: > 20 - [e10s] browser/components/migration/tests/marionette/test_refresh_firefox.py TestFirefoxRefresh.testReset > 20 - [e10s] /webdriver/tests/sessions/new_session/create_firstMatch.py > 19 - [e10s] testing/marionette/harness/marionette_harness/tests/unit/test_profile_management.py TestSwitchProfileWithoutWorkspace.test_replace_with_external_profile > 17 - [e10s] /webdriver/tests/sessions/new_session/create_alwaysMatch.py > 9 - [e10s] testing/marionette/harness/marionette_harness/tests/unit/test_profile_management.py TestQuitRestartWithWorkspace.test_quit_keeps_same_profile > 7 - [e10s] js/xpconnect/tests/marionette/test_loader_global_sharing.py TestLoaderGlobalSharing.test_global_sharing_settings > 6 - [e10s] /webdriver/tests/sessions/new_session/default_values.py > 6 - [e10s] /webdriver/tests/actions/modifier_click.py > 5 - [e10s] testing/firefox-ui/tests/functional/sessionstore/test_restore_windows_after_restart_and_quit.py TestSessionStoreEnabled.test_with_variety > 5 - [e10s] /webdriver/tests/sessions/new_session/response.py [1] https://hg.mozilla.org/mozilla-central/annotate/aac7218d8624/dom/fetch/FetchDriver.cpp#l853
This one isn't super prevalent, but it shows up as startup spam (ie just do |./mach run|) with a couple of warnings. I tracked down the URL in gdb and it seems pocket related: > https://getpocket.cdn.mozilla.net/v3/firefox/global-recs?version=2&consumer_key=40249-e88c401e1b1f2242d9e441c4&locale_lang=en-US I'm not sure if this is a useful warning and we should fix whatever is going on with pocket integration or if the warning is just spam at this point. It was added in preparation for FlyWeb (bug 1273279) which has since been removed, so maybe we should just remove it as well. Ben, any idea?
Flags: needinfo?(bkelly)
Removal patch if we think the warning isn't helpful.
Attachment #8950402 - Flags: review?(bkelly)
Assignee: nobody → erahm
Status: NEW → ASSIGNED
Comment on attachment 8950402 [details] [diff] [review] Stop warning about unknown content lengths Review of attachment 8950402 [details] [diff] [review]: ----------------------------------------------------------------- This is ok, but could you maybe replace the warning with a comment like: // We cannot trust the content-length when content-encoding or // transfer-encoding are set. There are many servers which just // get this wrong.
Attachment #8950402 - Flags: review?(bkelly) → review+
(In reply to Ben Kelly [:bkelly] from comment #3) > Comment on attachment 8950402 [details] [diff] [review] > Stop warning about unknown content lengths > > Review of attachment 8950402 [details] [diff] [review]: > ----------------------------------------------------------------- > > This is ok, but could you maybe replace the warning with a comment like: > > // We cannot trust the content-length when content-encoding or > // transfer-encoding are set. There are many servers which just > // get this wrong. Thanks, I'll add the comment as well.
Flags: needinfo?(bkelly)
Priority: -- → P2
Pushed by erahm@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/cc739b7afd04 Stop warning about unknown content lengths. r=bkelly
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla60
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: