Bug 1437693 - Stop warning about unknown content lengths. r=bkelly